# ipdr

./: .clang-format  .gitattributes  .gitconfig  .gitignore  .gitmodules  ;F  CMakeLists.txt  README.md  TODO.txt  \  all_rls.txt  all_runs.txt  analyse.sh  build_hmodels.sh  collect_rls_exp.sh  correct-peter2.txt  ham15.txt  last-output-4apr.txt  med_rls.txt  missed_rls.txt  new_rls.text  peter-2-2[max 1 switch.txt  peter-out.txt  peters.txt  profile.sh  result_notes.txt  rls_experiments-fullrelax.sh  rls_experiments-pebbling.sh  rls_experiments-peter.sh  rls_experiments-rsimple.sh  rls_experiments-z3pebbling.sh  rls_experiments-z3peter.sh  rls_experiments.sh  rls_list.sh  run_rls.sh  session.vim  small_rls.txt  temp_rls.txt  unit_test_funcs.txt  z3-options.txt  (+1 more)
benchmark/: basic.bench  hwmcc10-except-intel-aiger1.7z  rls-benchmarks.txt  run_rls.sh
benchmark/iscas85/bench/: SOURCE.txt  dag format notes.txt
benchmark/iscas85/verilog/: SOURCE.txt
inc/: cli-parse.h  io.h  tactic.h
inc/algo/: bounded.h  frame-temp.h  frame.h  frames.h  generalize.h  obligation.h  pdr.h  result.h  solver.h  vpdr.h
inc/auxiliary/: math.h  output.h  string-ext.h  string-extensions.h  tabulate-ext.h  types-ext.h  z3-ext.h
inc/model/: dag.h  exp-cache.h  expr.h  expr.hpp  graphvizgraph.h  h-operator.h  parse_bench.h  parse_dot.h  parse_tfc.h  pdr-context.h  pdr-model.h  pebbling-model.h  peterson.h  peterson.tpp
inc/model/pdr/: pdr-context.h  pdr-model.h
inc/model/pebbling/: pebbling-model.h  pebbling-result.h
inc/model/peterson/: peterson-result.h  peterson.h
inc/testing/: _logging.h  experiments.h  logger.h  logging.h  pebbling-experiments.h  peterson-experiments.h  stats.h  z3-pebbling-experiments.h  z3-pebbling-model.h  z3pdr.h
output/: compare_all_runs.sh  compare_run.sh
src/: cli-parse.cpp  io.cpp  main.cpp  pebbling-pdr.cpp  tactic.cpp
src/algo/: bounded.cpp  dynamic.cpp  frame.cpp  frames.cpp  generalize.cpp  ipdr-pebbling.cpp  ipdr-peter.cpp  obligation.cpp  optimize.cpp  pdr-alt.cpp  pdr-logging.cpp  pdr.cpp  result.cpp  solver.cpp
src/auxiliary/: str-ext.cpp  z3-ext.cpp
src/model/: dag.cpp  expr.cpp  pdr-context.cpp  pdr-model.cpp  pebbling-model.cpp  peterson.cpp
src/model/pdr/: pdr-context.cpp  pdr-model.cpp
src/model/pebbling/: pebbling-model.cpp  pebbling-result.cpp
src/model/peterson/: peterson-result.cpp  peterson.cpp
src/solver/: tseytin.cpp
src/testing/: experiments.cpp  logger.cpp  pebbling-experiments.cpp  peterson-experiments.cpp  stats.cpp  z3-pebbling-model.cpp  z3ipdr.cpp  z3pdr.cpp  z3pebbling-experiments.cpp
tools/: bakery-test.py  make_graph.py  model_order.txt  pebbling-ham3tc.py
